// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Tests Include Decl 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [
    Object {
      "filename": "src/BUILD.FABR",
      "kind": 4,
      "offset": 8,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
    },
  ],
  "namespaces": Array [],
  "properties": Array [],
  "targetdefs": Array [],
  "targets": Array [],
}
`;

exports[`Parser Tests Missing Close Brace 1`] = `
Array [
  "PROJECT.fabr:4:20:error:Read EOF but expected Identifier or '}'
unicode-properties;
                   ^
",
]
`;

exports[`Parser Tests Optional final semicolon 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [],
  "targetdefs": Array [],
  "targets": Array [
    Object {
      "kind": 2,
      "name": "@npm",
      "offset": 8,
      "properties": Array [
        Object {
          "kind": 1,
          "name": "deps",
          "offset": 17,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "values": Array [
            Object {
              "kind": 0,
              "offset": 24,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "chokidar:3.5.3",
                  },
                ],
              },
            },
            Object {
              "kind": 0,
              "offset": 39,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "picomatch:2.3.1",
                  },
                ],
              },
            },
            Object {
              "kind": 0,
              "offset": 55,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "unicode-properties:1.3.1",
                  },
                ],
              },
            },
          ],
        },
      ],
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "type": "npm_dep",
      "typeOffset": 0,
    },
  ],
}
`;

exports[`Parser Tests Property Decl 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [
    Object {
      "kind": 1,
      "name": "tsc",
      "offset": 0,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 4,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "@npm:typescript",
              },
            ],
          },
        },
      ],
    },
    Object {
      "kind": 1,
      "name": "js_target",
      "offset": 22,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 32,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "es5-commonjs",
              },
            ],
          },
        },
      ],
    },
    Object {
      "kind": 1,
      "name": "flavours",
      "offset": 46,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 55,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "red",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 59,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "green",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 65,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "blue",
              },
            ],
          },
        },
      ],
    },
  ],
  "targetdefs": Array [],
  "targets": Array [],
}
`;

exports[`Parser Tests Property Decl 2`] = `
Array [
  "PROJECT.fabr:1:12:error:Read EOF but expected Name, ';', or '}'
hello=world
           ^
",
]
`;

exports[`Parser Tests Property Decl 3`] = `
Array [
  "PROJECT.fabr:1:1:error:Read Path but expected Statement
foo/bar=woo;
^
",
]
`;

exports[`Parser Tests Property with Subst var 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [
    Object {
      "kind": 1,
      "name": "A",
      "offset": 0,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 2,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "b",
              },
            ],
          },
        },
      ],
    },
    Object {
      "kind": 1,
      "name": "B",
      "offset": 5,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 7,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 2,
                "value": "A",
              },
            ],
          },
        },
      ],
    },
  ],
  "targetdefs": Array [],
  "targets": Array [],
}
`;

exports[`Parser Tests Property with double quotes 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [
    Object {
      "kind": 1,
      "name": "A",
      "offset": 0,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 2,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "a b",
              },
            ],
          },
        },
      ],
    },
    Object {
      "kind": 1,
      "name": "B",
      "offset": 9,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 11,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "a",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 13,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "b",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 15,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "cd",
              },
              Object {
                "kind": 2,
                "value": "A",
              },
              Object {
                "kind": 0,
                "value": "}e",
              },
            ],
          },
        },
      ],
    },
  ],
  "targetdefs": Array [],
  "targets": Array [],
}
`;

exports[`Parser Tests Property with single quotes 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [
    Object {
      "kind": 1,
      "name": "A",
      "offset": 0,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 2,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "a b",
              },
            ],
          },
        },
      ],
    },
    Object {
      "kind": 1,
      "name": "B",
      "offset": 9,
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "values": Array [
        Object {
          "kind": 0,
          "offset": 11,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "a",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 13,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "b",
              },
            ],
          },
        },
        Object {
          "kind": 0,
          "offset": 15,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "value": Name {
            "parts": Array [
              Object {
                "kind": 0,
                "value": "\${A}",
              },
            ],
          },
        },
      ],
    },
  ],
  "targetdefs": Array [],
  "targets": Array [],
}
`;

exports[`Parser Tests Target Decl 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [],
  "targetdefs": Array [],
  "targets": Array [
    Object {
      "kind": 2,
      "name": "fabr",
      "offset": 11,
      "properties": Array [
        Object {
          "kind": 1,
          "name": "srcs",
          "offset": 18,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "values": Array [
            Object {
              "kind": 0,
              "offset": 23,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "src:",
                  },
                  Object {
                    "kind": 1,
                    "value": "**",
                  },
                  Object {
                    "kind": 0,
                    "value": "/",
                  },
                  Object {
                    "kind": 1,
                    "value": "*",
                  },
                  Object {
                    "kind": 0,
                    "value": ".ts",
                  },
                ],
              },
            },
          ],
        },
        Object {
          "kind": 1,
          "name": "deps",
          "offset": 36,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "values": Array [
            Object {
              "kind": 0,
              "offset": 42,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "es2019",
                  },
                ],
              },
            },
            Object {
              "kind": 0,
              "offset": 50,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "node",
                  },
                ],
              },
            },
            Object {
              "kind": 0,
              "offset": 56,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "unicode-properties",
                  },
                ],
              },
            },
          ],
        },
      ],
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "type": "js_package",
      "typeOffset": 0,
    },
    Object {
      "kind": 2,
      "name": "test",
      "offset": 84,
      "properties": Array [],
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "type": "empty",
      "typeOffset": 78,
    },
  ],
}
`;

exports[`Parser Tests Target Decl 2`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [],
  "targetdefs": Array [],
  "targets": Array [
    Object {
      "kind": 2,
      "name": "@fabr/common",
      "offset": 11,
      "properties": Array [
        Object {
          "kind": 1,
          "name": "srcs",
          "offset": 28,
          "source": Object {
            "file": "PROJECT.fabr",
            "fs": FileSet {
              "content": Map {},
            },
            "reader": Object {},
          },
          "values": Array [
            Object {
              "kind": 0,
              "offset": 34,
              "source": Object {
                "file": "PROJECT.fabr",
                "fs": FileSet {
                  "content": Map {},
                },
                "reader": Object {},
              },
              "value": Name {
                "parts": Array [
                  Object {
                    "kind": 0,
                    "value": "src:",
                  },
                  Object {
                    "kind": 1,
                    "value": "*",
                  },
                  Object {
                    "kind": 0,
                    "value": ".ts",
                  },
                ],
              },
            },
          ],
        },
      ],
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
      "type": "js_package",
      "typeOffset": 0,
    },
  ],
}
`;

exports[`Parser Tests Targetdef 1`] = `
Object {
  "defaults": Array [],
  "includes": Array [],
  "namespaces": Array [],
  "properties": Array [],
  "targetdefs": Array [
    Object {
      "kind": 3,
      "name": "js_package",
      "offset": 10,
      "properties": Object {
        "deps": Object {
          "required": false,
          "type": 1,
        },
        "srcs": Object {
          "required": true,
          "type": 1,
        },
        "version": Object {
          "required": false,
          "type": 0,
        },
      },
      "source": Object {
        "file": "PROJECT.fabr",
        "fs": FileSet {
          "content": Map {},
        },
        "reader": Object {},
      },
    },
  ],
  "targets": Array [],
}
`;
